feat: make content injector optional and custom